# worker-place

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  DEBUG.sh  INSTALL.sh  Makefile.am  config.xml  configure.ac
db_dump/requests/: getOffers.sql
db_dump/tables/: 02_Offer.sql  18_Informer2OfferRating.sql  19_Offer2Rating.sql  21_Session.sql
include/: BaseCore.h  CgiService.h  Config.h  Core.h  Core_DataBase.h  DataBase.h  HistoryManager.h  KompexSQLiteException.h  Log.h  Offer.h  Params.h  ParentDB.h  json.h
src/: BaseCore.cpp  BoostHelpers.cpp  CgiService.cpp  Config.cpp  Core.cpp  Core_DataBase.cpp  DB.cpp  DataBase.cpp  HistoryManager.cpp  KompexSQLiteDatabase.cpp  KompexSQLiteStatement.cpp  Log.cpp  Offer.cpp  Params.cpp  ParentDB.cpp  UrlParser.cpp  json.cpp  main.cpp
